Edited the main comment (author, description, etc)

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   Timothy E. Riedel
   triedel@utexas.edu
  
-  Authors in chronological order of contribution:
-  Author 1: Timothy E. Riedel
-  Author 2:
+ Author: Doeun Kim
+
+Research Educator: 
+Timothy Riedel
+triedel@utexas.edu
   
   References:
   http://docs.webplatform.org/wiki/concepts/programming/drawing_images_onto_canvas#Loading_the_image_programmatically
@@ -24,10 +26,12 @@
   http://stackoverflow.com/questions/11929099/html5-canvas-drawimage-ratio-bug-ios
   
   Brief Description of Goal of Code:
-  blah, blah, blah,
+In this App7, it will let users to take a picture and upload an image to the canvas.
+(This image will be uploaded, transformed, and displayed on the canvas)
  
   Known Issues:
-  blah, blah, blah, blah
+This will be an useful tool for users to upload their images.
+If this is incorporated into Diagnosis App, users can easily upload their photos of the symptoms and it will be halpful to give more precise diagnosis.
 -->
 
  <head>
