--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ In addition, it can be also used for color blind diagnosis for patients.
        
         var canvas2 = document.getElementById('myCanvas2');
         var context2 = canvas2.getContext("2d");
-        context.font = '20pt Calibri';
-        context.fillStyle = "black";
-        context.fillText("Blue image will go here", 10, 20);
+        context2.font = '20pt Calibri';
+        context2.fillStyle = "black";
+        context2.fillText("Blue image will go here", 10, 20);
        
       </script>
 
