}); //  end of reader.onload, 149 edit

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ In addition, it can be also used for color blind diagnosis for patients.
         
         } // end of img.onload 
         img.src = reader.result;
-      }) //  end of reader.onload
+      }); //  end of reader.onload
       
       reader.readAsDataURL(file);
     } // end of the if statement checking that file is an image
